src/OcctNative/OcctNative.h

    struct OcctPoint3d { double x; double y; double z; };
    struct OcctVector3d { double x; double y; double z; };
    OCCTBRIDGE_API OcctHandle occt_create();
    OCCTBRIDGE_API void occt_destroy(OcctHandle handle);
    OCCTBRIDGE_API const char* occt_last_error(OcctHandle handle);
    OCCTBRIDGE_API const char* occt_version();
    OCCTBRIDGE_API int occt_bridge_abi_version();
    OCCTBRIDGE_API const char* occt_bridge_version();
    OCCTBRIDGE_API const char* occt_bridge_build_info();
    // Viewer and interaction.
    OCCTBRIDGE_API int occt_initialize(OcctHandle handle, void* windowHandle);
    OCCTBRIDGE_API int occt_resize(OcctHandle handle);
    OCCTBRIDGE_API int occt_redraw(OcctHandle handle);
    OCCTBRIDGE_API int occt_fit_all(OcctHandle handle);
    OCCTBRIDGE_API int occt_fit_object(OcctHandle handle, OcctObjectId objectId);
    OCCTBRIDGE_API int occt_window_fit(OcctHandle handle, int x1, int y1, int x2, int y2);
    OCCTBRIDGE_API int occt_set_view(OcctHandle handle, int orientation);
    OCCTBRIDGE_API int occt_set_projection(OcctHandle handle, int projectionType);
    OCCTBRIDGE_API int occt_set_perspective_fov(OcctHandle handle, double degrees);
    OCCTBRIDGE_API int occt_set_background(OcctHandle handle, double r, double g, double b);
    OCCTBRIDGE_API int occt_set_display_mode(OcctHandle handle, int displayMode);
    OCCTBRIDGE_API int occt_set_triedron_visible(OcctHandle handle, int visible);
    OCCTBRIDGE_API int occt_set_view_cube_visible(OcctHandle handle, int visible);
    OCCTBRIDGE_API int occt_set_computed_mode(OcctHandle handle, int enabled);
    OCCTBRIDGE_API int occt_dump_view(OcctHandle handle, const char* utf8Path);
    OCCTBRIDGE_API int occt_screen_to_world(OcctHandle handle, int x, int y, OcctPoint3d* result);
    OCCTBRIDGE_API int occt_world_to_screen(OcctHandle handle, OcctPoint3d point, int* x, int* y);
    OCCTBRIDGE_API int occt_move_to(OcctHandle handle, int x, int y);
    OCCTBRIDGE_API int occt_select(OcctHandle handle, int x, int y, int appendSelection);
    OCCTBRIDGE_API int occt_select_rectangle(OcctHandle handle, int x1, int y1, int x2, int y2, int appendSelection);
    OCCTBRIDGE_API int occt_select_rectangle_ex(OcctHandle handle, int x1, int y1, int x2, int y2, int appendSelection, int allowOverlap);
    OCCTBRIDGE_API int occt_select_object(OcctHandle handle, OcctObjectId objectId, int appendSelection);
    OCCTBRIDGE_API int occt_set_selection_mode(OcctHandle handle, int selectionMode);
    OCCTBRIDGE_API int occt_selected_count(OcctHandle handle);
    OCCTBRIDGE_API OcctObjectId occt_selected_at(OcctHandle handle, int index);
    OCCTBRIDGE_API OcctObjectId occt_first_selected(OcctHandle handle);
    OCCTBRIDGE_API int occt_clear_selection(OcctHandle handle);
    OCCTBRIDGE_API int occt_start_rotation(OcctHandle handle, int x, int y);
    OCCTBRIDGE_API int occt_rotation(OcctHandle handle, int x, int y);
    OCCTBRIDGE_API int occt_pan(OcctHandle handle, int deltaX, int deltaY);
    OCCTBRIDGE_API int occt_zoom(OcctHandle handle, double factor);
    OCCTBRIDGE_API int occt_set_display_precision(OcctHandle handle, double deviationCoefficient, double deviationAngleDegrees, int applyExisting);
    OCCTBRIDGE_API int occt_set_default_material(OcctHandle handle, int material, int applyExisting);
    OCCTBRIDGE_API int occt_set_scene_lighting(OcctHandle handle, double ambientIntensity, double directionalIntensity, OcctVector3d direction, int headlight);
    OCCTBRIDGE_API int occt_reset_scene_lighting(OcctHandle handle);
    OCCTBRIDGE_API int occt_set_selection_tolerance(OcctHandle handle, int pixelTolerance);